--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <name>Hazelcast Private Repository</name>
       <url>https://repository.hazelcast.com/release/</url>
     </repository>
+
+    <repository>
+      <id>confluent</id>
+      <name>Confluent</name>
+      <url>http://packages.confluent.io/maven/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -37,6 +43,24 @@
         <groupId>com.hazelcast.jet</groupId>
         <artifactId>hazelcast-jet-enterprise</artifactId>
         <version>4.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hazelcast.jet</groupId>
+      <artifactId>hazelcast-jet-kafka</artifactId>
+      <version>4.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.7.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.30</version>
     </dependency>
 
     <dependency>
